--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css"> 
 
+
+    <!-- background colour of page* -->
     <style>
         body {
             background: #141414;
@@ -16,8 +19,15 @@
 </head>
 <body class="text-white">
 
+    <div class="buttons">
+        <span class="btn active" onclick="document.getElementById('text-input')">A</span>
+        <span class="btn">A</span>
+        <span class="btn">A</span>
+    </div>
+
     <div class="container text-center">
         <img src="img/speech.png" alt="" class="mb-5">
+        
         <!-- six column div so we have a narrow interface -->
         <div class="row">
             <div class="col-md-6 mx-auto"></div>
@@ -50,6 +60,7 @@
 
     </div>
 
+    <!-- javascript dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
